--- a/CommitTrackerPerformer/Framework/GetCommitCounts.xaml
+++ b/CommitTrackerPerformer/Framework/GetCommitCounts.xaml
@@ -8,7 +8,7 @@
   <mva:VisualBasic.Settings>
     <x:Null />
   </mva:VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>1208,2872</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>1208,2394</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>GetCommitCounts_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <scg:List x:TypeArguments="x:String" Capacity="36">
@@ -83,7 +83,7 @@
       <AssemblyReference>UiPath.System.Activities.Design</AssemblyReference>
     </scg:List>
   </TextExpression.ReferencesForImplementation>
-  <Sequence DisplayName="GetCommitCounts" sap:VirtualizedContainerService.HintSize="917,2767" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence DisplayName="GetCommitCounts" sap:VirtualizedContainerService.HintSize="917,2289" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
       <Variable x:TypeArguments="x:Int32" Name="numCommits" />
       <Variable x:TypeArguments="x:String" Name="contentString" />
@@ -124,7 +124,7 @@
               <OutArgument x:TypeArguments="x:String">[requestURL]</OutArgument>
             </ui:AssignOperation.To>
             <ui:AssignOperation.Value>
-              <InArgument x:TypeArguments="x:String">[String.Format("https://api.github.com/repos/{0}/{1}/branches", "220425-UiPath", "music-majors")]</InArgument>
+              <InArgument x:TypeArguments="x:String">[String.Format("https://api.github.com/repos/{0}/{1}-P1/branches", in_TransactionItem.SpecificContent("GitHub_Organization").ToString, in_TransactionItem.SpecificContent("Associate_Name").ToString.Replace(" ","-").Replace("'","-"))]</InArgument>
             </ui:AssignOperation.Value>
           </ui:AssignOperation>
         </scg:List>
@@ -287,24 +287,6 @@
         </ActivityAction>
       </ui:ForEach.Body>
     </ui:ForEach>
-    <ui:ForEach x:TypeArguments="scg:KeyValuePair(x:String, x:Int32)" CurrentIndex="{x:Null}" DisplayName="For Each" sap:VirtualizedContainerService.HintSize="875,307" sap2010:WorkflowViewState.IdRef="ForEach`1_2" Values="[out_branchCommits]">
-      <ui:ForEach.Body>
-        <ActivityAction x:TypeArguments="scg:KeyValuePair(x:String, x:Int32)">
-          <ActivityAction.Argument>
-            <DelegateInArgument x:TypeArguments="scg:KeyValuePair(x:String, x:Int32)" Name="branch" />
-          </ActivityAction.Argument>
-          <Sequence DisplayName="Body" sap:VirtualizedContainerService.HintSize="376,183" sap2010:WorkflowViewState.IdRef="Sequence_5">
-            <sap:WorkflowViewStateService.ViewState>
-              <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                <x:Boolean x:Key="IsExpanded">True</x:Boolean>
-              </scg:Dictionary>
-            </sap:WorkflowViewStateService.ViewState>
-            <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="334,91" sap2010:WorkflowViewState.IdRef="LogMessage_2" Level="Info" Message="[String.Format(&quot;{0}: {1}&quot;, branch.Key, branch.Value)]" />
-          </Sequence>
-        </ActivityAction>
-      </ui:ForEach.Body>
-    </ui:ForEach>
-    <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="875,91" sap2010:WorkflowViewState.IdRef="LogMessage_3" Level="Info" Message="[String.Format(&quot;Total Commits: {0}&quot;, out_TotalCommits)]" />
     <ui:LogMessage DisplayName="Log end of workflow" sap:VirtualizedContainerService.HintSize="875,91" sap2010:WorkflowViewState.IdRef="LogMessage_5" Level="Info" Message="[&quot;Finished counting commits...&quot;]" />
   </Sequence>
 </Activity>
