--- a/CommitTrackerDispatcher/Framework/GetInputData.xaml
+++ b/CommitTrackerDispatcher/Framework/GetInputData.xaml
@@ -187,7 +187,7 @@
                               </ActivityAction>
                             </ueab:ExcelApplicationCard.Body>
                           </ueab:ExcelApplicationCard>
-                          <ui:RenameFileX DisplayName="Rename file to mark as processed" FilePath="[inputFile.FullName]" sap:VirtualizedContainerService.HintSize="1051,141" sap2010:WorkflowViewState.IdRef="RenameFileX_1" KeepExtension="True" NewName="[String.Format(&quot;{0}-Processed&quot;, inputFile.Name)]" />
+                          <ui:RenameFileX DisplayName="Rename file to mark as processed" FilePath="[inputFile.FullName]" sap:VirtualizedContainerService.HintSize="1051,141" sap2010:WorkflowViewState.IdRef="RenameFileX_1" KeepExtension="True" NewName="[String.Format(&quot;{0}-Processed&quot;, Path.GetFileNameWithoutExtension(inputFile.FullName))]" />
                         </Sequence>
                       </If.Else>
                     </If>
